# personality

./: Cargo.toml  TODO.txt  questions.txt
src/: main.rs
