[package]
name = "personality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-server = "0.5.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
#tokio = "1.32.0"
tokio = { version = "1.32.0", features = ["full"] }
